--- a/build.gradle
+++ b/build.gradle
@@ -57,18 +57,14 @@ dependencies {
 
 	compile(
 			"org.lwjgl:lwjgl",
-			"org.lwjgl:lwjgl-assimp",
 			"org.lwjgl:lwjgl-glfw",
-			"org.lwjgl:lwjgl-openal",
 			"org.lwjgl:lwjgl-opengl",
 			"org.lwjgl:lwjgl-stb",
 	)
 
 	runtimeOnly(
 			"org.lwjgl:lwjgl::$lwjgl_natives",
-			"org.lwjgl:lwjgl-assimp::$lwjgl_natives",
 			"org.lwjgl:lwjgl-glfw::$lwjgl_natives",
-			"org.lwjgl:lwjgl-openal::$lwjgl_natives",
 			"org.lwjgl:lwjgl-opengl::$lwjgl_natives",
 			"org.lwjgl:lwjgl-stb::$lwjgl_natives",
 	)
@@ -90,6 +86,27 @@ test {
 jar {
 	manifest {
 		attributes "Main-Class": project.main_class
+	}
+}
+
+task fatJar(type: Jar) {
+	setArchivesBaseName("$project.name-fat")
+
+	manifest {
+		attributes "Main-Class": project.main_class
+	}
+
+	from {
+		configurations.runtimeClasspath.collect {
+			it.isDirectory() ? it : zipTree(it)
+		}
+	}
+
+	with jar
+
+	configure {
+		group = "build"
+		description = "Create an executable jar."
 	}
 }
 
